; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/mediatek/extr_clk-gate.c_mtk_cg_clr_bit_no_setclr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/mediatek/extr_clk-gate.c_mtk_cg_clr_bit_no_setclr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.mtk_clk_gate = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clk_hw*)* @mtk_cg_clr_bit_no_setclr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtk_cg_clr_bit_no_setclr(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.mtk_clk_gate*, align 8
  %4 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %5 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %6 = call %struct.mtk_clk_gate* @to_mtk_clk_gate(%struct.clk_hw* %5)
  store %struct.mtk_clk_gate* %6, %struct.mtk_clk_gate** %3, align 8
  %7 = load %struct.mtk_clk_gate*, %struct.mtk_clk_gate** %3, align 8
  %8 = getelementptr inbounds %struct.mtk_clk_gate, %struct.mtk_clk_gate* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @BIT(i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load %struct.mtk_clk_gate*, %struct.mtk_clk_gate** %3, align 8
  %12 = getelementptr inbounds %struct.mtk_clk_gate, %struct.mtk_clk_gate* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.mtk_clk_gate*, %struct.mtk_clk_gate** %3, align 8
  %15 = getelementptr inbounds %struct.mtk_clk_gate, %struct.mtk_clk_gate* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @regmap_update_bits(i32 %13, i32 %16, i32 %17, i32 0)
  ret void
}

declare dso_local %struct.mtk_clk_gate* @to_mtk_clk_gate(%struct.clk_hw*) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
